Shrinkwrap constraint / wrong rotation of the constrained object in "project" mode #42447

Closed
opened 2014-10-30 15:28:17 +01:00 by Stanislas Paillereau · 12 comments

System Information
Mac OSX

Blender Version
Broken: 2.7.2

Short description of error
Wrong rotation center when using the shrinkwrap constraint and scaling the constrained object (in "project" mode)

Exact steps for others to reproduce the error

  • create a mesh as target
  • create an empty
  • add a shrinkwrap constraint for the empty targeting the mesh (mode "project")
  • scale the empty (4 in Z for example).
  • rotate the empty

> the empty rotate around the empty position without the shrinkwrap constraint applied.

Same behavior in local and world space but different behavior than other modes (nearest surface and nearest vertex).

**System Information** Mac OSX **Blender Version** Broken: 2.7.2 **Short description of error** Wrong rotation center when using the shrinkwrap constraint and scaling the constrained object (in "project" mode) **Exact steps for others to reproduce the error** - create a mesh as target - create an empty - add a shrinkwrap constraint for the empty targeting the mesh (mode "project") - scale the empty (4 in Z for example). - rotate the empty # > the empty rotate around the empty position without the shrinkwrap constraint applied. Same behavior in local and world space but different behavior than other modes (nearest surface and nearest vertex).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @StanislasPaillereau

Added subscriber: @StanislasPaillereau

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a .blend file to help us reproducing the issue.

Please always attach a .blend file to help us reproducing the issue.

Was looking how to do that :D Found it !
bugs_shrinkwrap.blend

Was looking how to do that :D Found it ! [bugs_shrinkwrap.blend](https://archive.blender.org/developer/F120401/bugs_shrinkwrap.blend)

Hmmm… There is nothing wrong with rotation in itself, issue seems to be that this constraint does not handle really well non-uniformed scaled objects… will dig a bit more.

Hmmm… There is nothing wrong with rotation in itself, issue seems to be that this constraint does not handle really well non-uniformed scaled objects… will dig a bit more.

Yeah what bugged me was the fact it didn't behave the same way depending on the mode (for consistency sake). And that it would be more convenient for the "project" mode to have the rotation being centered after the projection as it is for the other modes.

Thx !

Yeah what bugged me was the fact it didn't behave the same way depending on the mode (for consistency sake). And that it would be more convenient for the "project" mode to have the rotation being centered after the projection as it is for the other modes. Thx !
Bastien Montagne self-assigned this 2014-10-31 10:04:41 +01:00

This issue was referenced by b154aa8c06

This issue was referenced by b154aa8c060a60d476970bb8b8fab3912a2afc22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b154aa8c06.

Closed by commit b154aa8c06.

This issue was referenced by 599c8a2c8e

This issue was referenced by 599c8a2c8e4cf1f904c5422916ebfd8d12eebe69

This issue was referenced by ba43ea24a7

This issue was referenced by ba43ea24a72ceb3b098c7ae0b10e03795fa2a1ea
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42447
No description provided.